# Accio-Switch

./: .gitignore  .npmrc  LICENSE  README.md  design-qa.md  index.html  package-lock.json  package.json  新窗口交接说明.md
.github/workflows/: publish-release.yml
electron/: main.cjs  preload.cjs  protocol.cjs  protocol.test.cjs  routing.cjs
scripts/: build-electron.mjs
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
