[package]
name = "accio-switch"
version = "0.1.0"
description = "Local model routing companion for Accio Work"
authors = ["Accio Switch"]
edition = "2021"

[lib]
name = "accio_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "accio-switch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

